[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/MenuScript.gd" type="Script" id=1]
[ext_resource path="res://Images/Track1.png" type="Texture" id=2]
[ext_resource path="res://Music/Cars 2 Game Soundtrack - Main Menu.wav" type="AudioStream" id=3]
[ext_resource path="res://Images/ArrowKeys.png" type="Texture" id=4]
[ext_resource path="res://Themes/Button.tres" type="Theme" id=5]
[ext_resource path="res://Themes/Title.tres" type="Theme" id=6]

[sub_resource type="StyleBoxFlat" id=1]

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 2 )

[node name="Background Color" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.486275 )

[node name="Main Screen" type="VBoxContainer" parent="."]
anchor_left = 0.1
anchor_right = 0.9
anchor_bottom = 1.0

[node name="Spacer" type="Label" parent="Main Screen"]
margin_right = 1536.0
margin_bottom = 82.0
text = "



"

[node name="Title" type="Label" parent="Main Screen"]
margin_top = 86.0
margin_right = 1536.0
margin_bottom = 157.0
theme = ExtResource( 6 )
text = "Dakota Driving Simulator"
align = 1

[node name="Spacer2" type="Label" parent="Main Screen"]
margin_top = 161.0
margin_right = 1536.0
margin_bottom = 226.0
text = "


"

[node name="Play" type="Button" parent="Main Screen"]
margin_top = 230.0
margin_right = 1536.0
margin_bottom = 287.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.0862745, 0.878431, 0.0705882, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Play"
flat = true

[node name="Spacer4" type="Label" parent="Main Screen"]
margin_top = 291.0
margin_right = 1536.0
margin_bottom = 322.0
text = "
"

[node name="Settings" type="Button" parent="Main Screen"]
margin_top = 326.0
margin_right = 1536.0
margin_bottom = 383.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.933333, 0.901961, 0.109804, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Settings"
flat = true

[node name="Spacer3" type="Label" parent="Main Screen"]
margin_top = 387.0
margin_right = 1536.0
margin_bottom = 418.0
text = "
"

[node name="Controls" type="Button" parent="Main Screen"]
margin_top = 422.0
margin_right = 1536.0
margin_bottom = 479.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.952941, 0.0352941, 0.8, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Controls"
flat = true

[node name="Spacer5" type="Label" parent="Main Screen"]
margin_top = 483.0
margin_right = 1536.0
margin_bottom = 514.0
text = "
"

[node name="Quit2" type="Button" parent="Main Screen"]
margin_top = 518.0
margin_right = 1536.0
margin_bottom = 575.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.952941, 0.45098, 0.0352941, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Quit"
flat = true

[node name="Settings Screen" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.35
anchor_right = 0.65
anchor_bottom = 1.0

[node name="Spacer" type="Label" parent="Settings Screen"]
margin_right = 576.0
margin_bottom = 82.0
text = "



"

[node name="Title" type="Label" parent="Settings Screen"]
margin_top = 86.0
margin_right = 576.0
margin_bottom = 157.0
theme = ExtResource( 6 )
text = "Settings"
align = 1

[node name="Spacer2" type="Label" parent="Settings Screen"]
margin_top = 161.0
margin_right = 576.0
margin_bottom = 226.0
text = "


"

[node name="EnableTrees" type="CheckBox" parent="Settings Screen"]
margin_top = 230.0
margin_right = 576.0
margin_bottom = 289.0
theme = ExtResource( 5 )
custom_styles/pressed = SubResource( 1 )
pressed = true
text = "Enable Trees"
align = 1

[node name="Spacer3" type="Label" parent="Settings Screen"]
margin_top = 293.0
margin_right = 576.0
margin_bottom = 324.0
text = "
"

[node name="ToggleFullscreen" type="CheckBox" parent="Settings Screen"]
margin_top = 328.0
margin_right = 576.0
margin_bottom = 387.0
theme = ExtResource( 5 )
custom_styles/pressed = SubResource( 1 )
pressed = true
text = "Fullscreen"
align = 1

[node name="Spacer4" type="Label" parent="Settings Screen"]
margin_top = 391.0
margin_right = 576.0
margin_bottom = 422.0
text = "
"

[node name="Spacer6" type="Label" parent="Settings Screen"]
margin_top = 426.0
margin_right = 576.0
margin_bottom = 477.0
theme = ExtResource( 5 )
text = "Volume"
align = 1

[node name="HSlider" type="HSlider" parent="Settings Screen"]
margin_top = 481.0
margin_right = 576.0
margin_bottom = 497.0
min_value = -50.0
max_value = 0.0

[node name="Spacer5" type="Label" parent="Settings Screen"]
margin_top = 501.0
margin_right = 576.0
margin_bottom = 532.0
text = "
"

[node name="ReturnFromControlScreen2" type="Button" parent="Settings Screen"]
margin_top = 536.0
margin_right = 576.0
margin_bottom = 593.0
theme = ExtResource( 5 )
text = "MAin menu"
flat = true

[node name="Controls Screen" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="Controls Screen"]
margin_right = 1960.0
margin_bottom = 512.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Controls Screen/HBoxContainer"]
margin_left = 267.0
margin_right = 779.0
margin_bottom = 512.0
texture = ExtResource( 4 )

[node name="Spacer2" type="Label" parent="Controls Screen/HBoxContainer"]
margin_left = 783.0
margin_top = 232.0
margin_right = 847.0
margin_bottom = 280.0
text = "                

"

[node name="Label" type="Label" parent="Controls Screen/HBoxContainer"]
margin_left = 851.0
margin_top = 183.0
margin_right = 1693.0
margin_bottom = 328.0
theme = ExtResource( 6 )
text = "Control Car with
Arrow Keys!"
align = 1

[node name="Spacer" type="Label" parent="Controls Screen"]
margin_top = 516.0
margin_right = 1960.0
margin_bottom = 615.0
text = "




"

[node name="ReturnFromControlScreen" type="Button" parent="Controls Screen"]
margin_top = 619.0
margin_right = 1960.0
margin_bottom = 676.0
theme = ExtResource( 5 )
text = "MAin menu"
flat = true

[node name="Level Select Screen" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.25
anchor_right = 0.75
anchor_bottom = 1.0

[node name="Spacer" type="Label" parent="Level Select Screen"]
margin_right = 960.0
margin_bottom = 82.0
text = "



"

[node name="Title" type="Label" parent="Level Select Screen"]
margin_top = 86.0
margin_right = 960.0
margin_bottom = 157.0
theme = ExtResource( 6 )
text = "Select Level"
align = 1

[node name="Spacer2" type="Label" parent="Level Select Screen"]
margin_top = 161.0
margin_right = 960.0
margin_bottom = 226.0
text = "


"

[node name="Level1" type="Button" parent="Level Select Screen"]
margin_top = 230.0
margin_right = 960.0
margin_bottom = 287.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.0862745, 0.878431, 0.0705882, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Level One"
flat = true

[node name="Spacer4" type="Label" parent="Level Select Screen"]
margin_top = 291.0
margin_right = 960.0
margin_bottom = 322.0
text = "
"

[node name="Level2" type="Button" parent="Level Select Screen"]
margin_top = 326.0
margin_right = 960.0
margin_bottom = 383.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.933333, 0.901961, 0.109804, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Level Two"
flat = true

[node name="Spacer3" type="Label" parent="Level Select Screen"]
margin_top = 387.0
margin_right = 960.0
margin_bottom = 418.0
text = "
"

[node name="Level3" type="Button" parent="Level Select Screen"]
margin_top = 422.0
margin_right = 960.0
margin_bottom = 479.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.952941, 0.0352941, 0.8, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Level Three"
flat = true

[node name="Spacer5" type="Label" parent="Level Select Screen"]
margin_top = 483.0
margin_right = 960.0
margin_bottom = 565.0
text = "



"

[node name="ReturnFromControlScreen2" type="Button" parent="Level Select Screen"]
margin_top = 569.0
margin_right = 960.0
margin_bottom = 626.0
theme = ExtResource( 5 )
text = "MAin menu"
flat = true

[connection signal="pressed" from="Main Screen/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Main Screen/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Main Screen/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="Main Screen/Quit2" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Settings Screen/EnableTrees" to="." method="_on_EnableTrees_pressed"]
[connection signal="pressed" from="Settings Screen/ToggleFullscreen" to="." method="_on_ToggleFullscreen_pressed"]
[connection signal="value_changed" from="Settings Screen/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Settings Screen/ReturnFromControlScreen2" to="." method="_on_ReturnFromControlScreen_pressed"]
[connection signal="pressed" from="Controls Screen/ReturnFromControlScreen" to="." method="_on_ReturnFromControlScreen_pressed"]
[connection signal="pressed" from="Level Select Screen/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="Level Select Screen/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="Level Select Screen/Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="Level Select Screen/ReturnFromControlScreen2" to="." method="_on_ReturnFromControlScreen_pressed"]
